k8s.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    io.bihero.hello.service: bihero-helloworld
  name: bihero-helloworld
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        io.bihero.hello.service: bihero-helloworld
    spec:
      containers:
        - image: bihero/helloworld:${HELLO_WORLD_SERVICE_IMAGE_VERSION}
          name: bihero-helloworld
          ports:
            - containerPort: 8083
          imagePullPolicy: Always
          resources: {}
          volumeMounts:
            - mountPath: /usr/local/
              name: hello-world-config
      restartPolicy: Always
      volumes:
        - name: hello-world-config
          configMap:
            name: hello-world-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.bihero.hello.service: bihero-helloworld
  name: bihero-helloworld
spec:
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8083
  selector:
    io.bihero.hello.service: bihero-helloworld
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bihero-helloworld
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/secure-backends: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/tls-acme: "true"
  namespace: default
spec:
  tls:
    - hosts:
        - ${DOMAIN}
      secretName: bihero
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - path: /api/helloworld(/|$)(.*)
            backend:
              serviceName: bihero-helloworld
              servicePort: 8083
